@@ -7,6 +7,7 @@ Version 0.17
 ------------
 
 (bugfix release, released on X)
+- Fix hashindex ARM memory alignment issue (#309)
 - Improve hashindex error messages (#298)
 
 Version 0.16
